freeform-docs/v3/reliability/README.md
---
title: Craft Freeform 3.x - Best Practices
prev: false
next: false
---

<meta property="og:image" content="https://docs.solspace.com/extras/social/craft/freeform/freeform.png" />

::: version /craft/freeform/v5/reliability/
Freeform
:::

<div id="pr-heading">
    <img src="https://docs.solspace.com/extras/icons/products/freeform-icon.png" alt="Freeform" class="pr-image">
    <span class="pr-name">Freeform</span>
    <span class="pr-category">for Craft</span>
    <div class="pr-v-wrapper">
        <div class="pr-v">
            <span class="pr-v-v">3.x</span>
            <span class="pr-v-type pr-retired">Retired</span>
            <span class="pr-v-arrow arrow down"></span>
        </div>
        <ul class="pr-v-list">
            <li><a href="/craft/freeform/v5/">5.x<span class="pr-v-type pr-latest">✓ Latest</span></a></li>
            <li><a href="/craft/freeform/v4/">4.x</a></li>
            <li><a href="/craft/freeform/v3/">3.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v2/">2.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v1/">1.x<span class="pr-v-type pr-retired">Retired</span></a></li>
        </ul>
    </div>
    <div class="pr-buy">
        <a href="https://plugins.craftcms.com/freeform" class="button button-blue"><span class="external-url">Plugin Store</span></a>
    </div>
</div>

<span class="page-section">Reliability</span>

# Reliability for Freeform

<div class="hero-lead">

Freeform is committed to being the most robust and reliable form plugin for Craft CMS. Freeform has been carefully and meticulously developed and tested over many years and is in use across tens of thousands of websites. However, one other crutial piece of the puzzle in reliability is how your specific site and environment are performing. Because of this, Freeform includes an extensive error logging feature, email issue alerts, an Update Notices feature to alert you of important fixes and changes, and a weekly/daily digest email to keep your finger on the pulse of your website.

</div>

<div class="menu-grid">
    <a href="./digest/" class="menu-box">
        <img src="../../../../images/icons/email-report.png" alt="Weekly/Daily Digest">
        <div class="menu-grid-text">
            <h3>Weekly/Daily Digest</h3>
            <p>Helps keep your finger on the pulse of your site.</p>
        </div>
    </a>
    <a href="./update-notices/" class="menu-box">
        <img src="../../../../images/icons/update-notification.png" alt="Update Notices">
        <div class="menu-grid-text">
            <h3>Update Notices</h3>
            <p>Alerts you of potential issues that specifically may affect your site.</p>
        </div>
    </a>
    <a href="./email-alerts/" class="menu-box">
        <img src="../../../../images/icons/alert.png" alt="Email Failure Alerts">
        <div class="menu-grid-text">
            <h3>Email Failure Alerts</h3>
            <p>Send notifications when an email fails to send due to an error on your site.</p>
        </div>
    </a>
    <a href="./diagnostics/" class="menu-box">
        <img src="../../../../images/icons/review.png" alt="Diagnostics">
        <div class="menu-grid-text">
            <h3>Diagnostics</h3>
            <p>A self-diagnostics page that may help you track down potential issues.</p>
        </div>
    </a>
</div>

![Update Notices preview](../images/cp_dashboard-update-notices.png)